# alice-chess-engine

./: Cargo.toml  README.md  config.toml  debug_tree.json  debug_tree.txt  debug_tree_connections.json
.github/workflows/: rust.yml
src/: fen.rs  game.rs  main.rs  piece_sq_tables.rs  uci.rs
src/bots/: basic_bot.rs  bot_traits.rs  chess_bot.rs  mod.rs
src/moves/: mod.rs  move_gen.rs  user_move.rs
src/tables/: mod.rs  piece_sq_tables.rs  zobrist.rs
src/types/: mod.rs  pieces_colored.rs
src/uci/: conversion.rs  mod.rs  uci.rs
