[package]
name = "alice-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
chess = "3.2.0"
rand = "0.8.5"
vampirc-uci = "0.11.1"
mimalloc = "0.1.39"
serde_json = "1.0.113"


[profile.release]
panic = "abort"
strip = "symbols"
lto = "fat"
